# oca-ocb-hr

./: .gitignore  README.md
odoo-bringout-oca-ocb-hr/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_attendance/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_contract/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_expense/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_fleet/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_gamification/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_holidays/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_holidays_attendance/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_hourly_cost/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_maintenance/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_org_chart/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_presence/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_recruitment/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_recruitment_skills/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_recruitment_survey/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_skills/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_skills_slides/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_skills_slides/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-hr_skills_slides/hr_skills_slides/i18n/: bs.po
odoo-bringout-oca-ocb-hr_skills_survey/: README.md  pyproject.toml
odoo-bringout-oca-ocb-hr_timesheet/: README.md  (+1 more)
(+241 files in other folders)
